--- a/Module2 - Assignment/css/styles.css
+++ b/Module2 - Assignment/css/styles.css
@@ -35,7 +35,7 @@ div {
     margin-bottom: auto;
 }
 
-.sub1 {
+.food1 {
     float: right;
     width: 100px;
     padding: 5px;
@@ -48,7 +48,7 @@ div {
 
 }
 
-.sub2 {
+.food2 {
     float: right;
     color: white;
     width: 100px;
@@ -62,7 +62,7 @@ div {
 
 }
 
-.sub3 {
+.food3 {
     color: black;
     float: right;
     width: 100px;
